Fixed calendar on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -179,6 +179,7 @@ input:-webkit-autofill:active {
 	box-shadow: 0 0 0 30px var(--element) inset;
 	-webkit-box-shadow: 0 0 0 30px var(--element) inset !important;
 	border: 1px solid var(--text-primary);
+	border-radius: var(--radius-1);
 	box-sizing: border-box;
 }
 
@@ -1074,11 +1075,13 @@ a {
 
 button {
 	color: var(--text-primary);
+	font-size: 0.75rem;
 }
 
 .react-calendar {
 	width: 350px;
-	max-width: 100%;
+	max-width: calc(200% + 0.5rem);
+	/* height: auto; */
 	background: var(--element);
 	border: 1px solid var(--text-primary);
 	border-radius: var(--radius-1);
@@ -1086,6 +1089,7 @@ button {
 	line-height: 1.125em;
 	color: var(--text-primary);
 	position: absolute;
+	transform: translateY(calc(-100%));
 }
 
 .react-calendar > button {
@@ -1118,7 +1122,8 @@ button {
 	/* color: white; */
 }
 .react-calendar__navigation button {
-	min-width: 44px;
+	min-width: 22px;
+	/* min-width: 22px; */
 	background: none;
 }
 .react-calendar__navigation button:disabled {
@@ -1136,7 +1141,7 @@ button {
 	/* color: white; */
 }
 .react-calendar__month-view__weekdays__weekday {
-	padding: 0.5em;
+	/* padding: 0.5em; */
 }
 .react-calendar__month-view__weekNumbers .react-calendar__tile {
 	display: flex;
@@ -1154,11 +1159,11 @@ button {
 .react-calendar__year-view .react-calendar__tile,
 .react-calendar__decade-view .react-calendar__tile,
 .react-calendar__century-view .react-calendar__tile {
-	padding: 2em 0.5em;
+	padding: 1em 0.5em;
 }
 .react-calendar__tile {
 	max-width: 100%;
-	padding: 10px 6.6667px;
+	padding: 8px 6.6667px;
 	background: none;
 	text-align: center;
 	line-height: 16px;
@@ -1200,4 +1205,139 @@ button {
 }
 .react-calendar--selectRange .react-calendar__tile--hover {
 	background-color: var(--highlight);
+}
+
+@media screen and (min-width: 568px) {
+	button {
+		color: var(--text-primary);
+		font-size: 0.875rem;
+	}
+
+	.react-calendar {
+		width: 350px;
+		max-width: 100%;
+		background: var(--element);
+		border: 1px solid var(--text-primary);
+		border-radius: var(--radius-1);
+		font-family: var(--font);
+		line-height: 1.125em;
+		color: var(--text-primary);
+		position: absolute;
+		transform: translateY(calc(-100% - 40px));
+		/* font-size: 1rem; */
+	}
+
+	.react-calendar > button {
+		color: white;
+		background-color: red;
+	}
+	.react-calendar--doubleView {
+		width: 700px;
+	}
+	.react-calendar--doubleView .react-calendar__viewContainer {
+		display: flex;
+		margin: -0.5em;
+	}
+	.react-calendar--doubleView .react-calendar__viewContainer > * {
+		width: 50%;
+		margin: 0.5em;
+	}
+	.react-calendar button {
+		margin: 0;
+		border: 0;
+		outline: none;
+	}
+	.react-calendar button:enabled:hover {
+		cursor: pointer;
+	}
+	.react-calendar__navigation {
+		display: flex;
+		height: 44px;
+		margin-bottom: 1em;
+		/* color: white; */
+	}
+	.react-calendar__navigation button {
+		min-width: 44px;
+		background: none;
+	}
+	.react-calendar__navigation button:disabled {
+		background-color: #ff0000;
+	}
+	.react-calendar__navigation button:enabled:hover,
+	.react-calendar__navigation button:enabled:focus {
+		background-color: var(--highlight);
+	}
+	.react-calendar__month-view__weekdays {
+		text-align: center;
+		text-transform: uppercase;
+		font-weight: bold;
+		font-size: 0.75em;
+		/* color: white; */
+	}
+	.react-calendar__month-view__weekdays__weekday {
+		padding: 0.5em;
+	}
+	.react-calendar__month-view__weekNumbers .react-calendar__tile {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-size: 0.75em;
+		font-weight: bold;
+	}
+	.react-calendar__month-view__days__day--weekend {
+		color: #d10000;
+	}
+	.react-calendar__month-view__days__day--neighboringMonth {
+		color: #757575;
+	}
+	.react-calendar__year-view .react-calendar__tile,
+	.react-calendar__decade-view .react-calendar__tile,
+	.react-calendar__century-view .react-calendar__tile {
+		padding: 2em 0.5em;
+	}
+	.react-calendar__tile {
+		max-width: 100%;
+		padding: 8px 6.6667px;
+		background: none;
+		text-align: center;
+		line-height: 16px;
+		/* color: var(--text-primary); */
+	}
+	.react-calendar__tile:disabled {
+		background-color: #f0f0f0;
+	}
+	.react-calendar__tile:enabled:hover,
+	.react-calendar__tile:enabled:focus {
+		background-color: var(--highlight);
+		border-radius: var(--radius-1);
+	}
+	.react-calendar__tile--now {
+		background: var(--draft-bg);
+		border-radius: var(--radius-1);
+	}
+	.react-calendar__tile--now:enabled:hover,
+	.react-calendar__tile--now:enabled:focus {
+		background: var(--highlight);
+	}
+	.react-calendar__tile--hasActive {
+		background: var(--highlight);
+		border-radius: var(--radius-1);
+	}
+	.react-calendar__tile--hasActive:enabled:hover,
+	.react-calendar__tile--hasActive:enabled:focus {
+		background-color: var(--highlight);
+	}
+	.react-calendar__tile--active {
+		background: var(--highlight);
+		border-radius: var(--radius-1);
+		color: var(--text-primary);
+		border: 2px solid white;
+	}
+	.react-calendar__tile--active:enabled:hover,
+	.react-calendar__tile--active:enabled:focus {
+		background: var(--highlight);
+	}
+	.react-calendar--selectRange .react-calendar__tile--hover {
+		background-color: var(--highlight);
+	}
 }
